hw 2 part 1 complete

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,3 +59,8 @@ form label {
   font-weight: bold;
   color: maroon;
 }
+
+/* highlight the background */
+table#movies th.hilite {
+  background-color: yellow;
+}
